--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Local Professionnel</title>
+  <title>Maison à Livron-Sur-Drôme</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,16 +14,17 @@
         <img src="./logo.png" alt="Logo">
       </div>
       <div class="text-background">
-        <h1>Bureaux à proximité de stationnement </h1>
-        <p>Livron sur Drôme</p>
+        <h1>Corps de ferme à repenser entièrement </h1>
+        <p>Livron-sur-Drôme</p>
         <p>Cyrille BOUVET - 06 22 85 16 39 / Yaël BORJA - 07 51 62 09 13</p>
-        <p class="prix">99 200 € </p>
+        <p class="prix">235 000 €</p>
       </div>
     </header>
     <nav class="menu">
       <a href="#a-propos">Description</a>
       <a href="#photos">Photos</a>
       <a href="#video-interieur">Vidéo intérieur</a>
+      <a href="#video-exterieur">Vidéo extérieur</a>
       <a href="#geolocalisation">Géolocalisation</a>
       <a href="#cadastre">Cadastre</a>
       <a href="#Vue aérienne">Vue aérienne</a>
@@ -35,9 +36,14 @@
       <section id="a-propos">
         <h2>A propos</h2>
         <p>
- Découvrez ces bureaux idéalement situés à Livron-sur-Drôme, à deux pas du grand parking gratuit de la mairie. Ils bénéficient d’un double accès pratique, depuis la rue du Parc et l’avenue principale Joseph Combier. </p> 
-<p>Situés au sein d’une petite copropriété de 5 lots avec un espace vert accueillant, ces locaux offrent un bel espace de travail lumineux d’environ 35 m² pouvant servir de coworking. Ils disposent également de plusieurs pièces modulables, facilement aménageables selon la nature de votre activité.</p>
-<p>Un emplacement stratégique pour développer votre activité dans un environnement agréable et fonctionnel.
+<strong>À Livron, un projet immobilier aux possibilités infinies !
+Investisseurs, artisans, amoureux de la rénovation ou porteurs de projets collectifs :</strong> cette bâtisse est une occasion unique de donner vie à vos idées.</p> 
+<p><strong>Un emplacement idéal :</strong>  A proximité immédiate du centre de Livron, vous profitez de toutes les commodités (écoles, commerces, gare).</p>
+<p><Strong>Une surface rare :</Strong> Près de 400 m² exploitables, permettant de créer une grande maison de caractère, plusieurs logements indépendants (jusqu’à 6 habitations) ou encore un projet mêlant habitat et activité professionnelle.</p>
+<p><Strong>Un terrain généreux :</Strong> Plus de 1 700 m² plats et arborés avec figuiers, oliviers, bananiers… un cadre verdoyant qui fait déjà tout son charme.</p>
+<p><strong>Un potentiel créatif :</strong> Les 45 m² d’ateliers présents sur place offrent un espace supplémentaire idéal pour un artisan, un bricoleur ou même des aménagements annexes (studio, rangement, espace de travail).</p>
+<p><strong>Pourquoi ce bien est exceptionnel ?</strong> 
+Parce qu’il réunit à la fois l’authenticité des vieilles pierres, un terrain vaste, un emplacement stratégique et une modularité quasi illimitée. Que vous soyez dans une logique d’investissement locatif, de revente après rénovation ou de construction d’un lieu de vie familial/partagé, ce corps de ferme coche toutes les cases.</p>
 </p>
 </p>
 </p>
@@ -52,62 +58,97 @@
           <img src="photos/5.jpeg" alt="Photo 3"  />
           <img src="photos/6.jpeg" alt="Photo 3" />
           <img src="photos/7.jpeg" alt="Photo 3"  />
+          <img src="photos/8.jpeg" alt="Photo 1" />
+          <img src="photos/9.jpeg" alt="Photo 2"/>
+          <img src="photos/10.jpeg" alt="Photo 3" />
+          <img src="photos/11.jpeg" alt="Photo 3"  />
+          <img src="photos/12.jpeg" alt="Photo 3"  />
+          <img src="photos/13.jpeg" alt="Photo 3" />
+          <img src="photos/14.jpeg" alt="Photo 3"  />
+          <img src="photos/15.jpeg" alt="Photo 1" />
+          <img src="photos/16.jpeg" alt="Photo 2"/>
+          <img src="photos/17.jpeg" alt="Photo 3" />
+          <img src="photos/18.jpeg" alt="Photo 3"  />
+          <img src="photos/19.jpeg" alt="Photo 3"  />
+          <img src="photos/20.jpeg" alt="Photo 3" />
+          <img src="photos/21.jpeg" alt="Photo 3"  />
+          <img src="photos/22.jpeg" alt="Photo 3"  />
           <!-- Ajoutez autant de photos que nécessaire -->
           <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
           <a class="next" onclick="changeSlide(1)">&#10095;</a>
         </div>
       </section>
       <section id="video-interieur" class="video-section">
-        <h2>Vidéo Intérieur/Extérieur/</h2>
-        <iframe src="https://www.youtube.com/embed/nmpAIOhpPZo"></iframe>
+        <h2>Vidéo Intérieur</h2>
+        <iframe src="https://www.youtube.com/embed/k21Zlaj3kdo"></iframe>
+      </section>
+      <section id="video-exterieur" class="video-section">
+        <h2>Vidéo Extérieur</h2>
+        <iframe src="https://www.youtube.com/embed/Y5VBjyiboKU"></iframe>
       </section>
       <section id="geolocalisation">  
         <h2>Géolocalisation</h2>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=11UC6ojKlLv13zNXyGNsn0Mspi_k6VOc&usp=sharing"></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1F0xkGHED5P18183rLMaF9LokhghakpM&usp=sharing"></iframe>
       </section>
       <section id="cadastre">
         <h2>Cadastre</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/cadastre.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/Cadastre.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
       <section id="Vue aérienne">
         <h2>Vue aérienne</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/vue aérienne.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/Vue Aérienne.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
     <section id="details-techniques">
     <h2>Détails Techniques</h2>
     <ul>
-        <li><strong>Année de construction :</strong> années 1968-72</li>
-        <li><strong>Année d’achat :</strong>2013</li>
-        <li><strong>Matériaux de construction :</strong> Béton banché / Plancher bas : Dalle béton donnant sur un sous-sol non chauffé</li>
-        <li><strong>Toiture:</strong>Plafond avec ou sans remplissage non isolé donnant sur un local chauffé</li>
+        <li><strong>Année de construction :</strong> avant 1900</li>
+        <li><strong>Année d’achat :</strong> 1964</li>
+        <li><strong>Matériaux de construction :</strong> Pierre</li>
+        <li><strong>Isolation :</strong>murs /aucune - Plafond / uniquement sur les chambres de la partie habitable (5-10cm)</li>
+        <li><strong>Toiture:</strong> Charpente traditionnelle</li>
         <li><strong>Assainissement :</strong> Tout à l'égout</li>
-        <li><strong>Huisseries :</strong> Porte(s) bois avec 30-60% de vitrage simple / Fenêtres battantes bois double vitrage</li>
-        <li><strong>Superficie habitable :</strong> environ 72 m2</li> 
-        <li><strong>Mode de chauffage :</strong> Panneau rayonnant électrique avec programmateur pièce par pièce /PAC air/air</li>
-        <li><strong>Taxe foncière :</strong>787€</li>
-        <li><strong>Autres informations :</strong>Charges copropriété 1 017 €</li>
+        <li><strong>Huisseries :</strong> Bois simple vitrage </li>
+        <li><strong>Superficie habitable :</strong> 117 m2</li>
+        <li><strong>Superficie exploitable :</strong> 398 m2</li>
+        <li><strong>Superficie ateliers supplémentaires :</strong> 47 m2</li>
+        <li><strong>Surface cadastrale :</strong> 1 705 m2 </li> 
+        <li><strong>Mode de chauffage :</strong> Chaudière fuel par radiateur de 2008 / cuve 3 000 litres</li>
+        <li><strong>Taxe foncière :</strong> 2 603 €</li>
+        <li><strong>Autres informations :</strong> Forrage sur la propriété / Cave</li>
+        <li><strong>Autres informations :</strong> Possibilités de créer plusieurs logements</li>
+        <li><strong>Informations urbanistiques :</strong> Parcelles placées en zone Uc sur la commune : Zone urbaine équipée correspondant aux quartiers résidentiels de la commune.
+Elle est destinée principalement à recevoir des constructions à usage d’habitation ainsi que
+les activités et services nécessaires à la vie sociale.</li>
     </ul>
 </section>
    <section id="dpe">
     <h2>Diagnostic de Performance Énergétique</h2>
     <div style="display: flex; justify-content: center; align-items: center;">
-      <img src="documents/DPE.png" alt="DPE" style="max-width: 40%; height: auto;" />
+      <img src="documents/étiquette DPE.png" alt="DPE" style="max-width: 40%; height: auto;" />
     </div>
 </section>
       <section id="elements-supplementaires">
         <h2>Documents</h2>
         <div class="documents">
-          <a href="documents/DDT CGMA.pdf">
+          <a href="documents/9 diagnostics.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             DPE
           </a>
-           <a href="documents/Croquis.png">
+          <a href="documents/11 audit.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            AUDIT
+          </a>
+           <a href="documents/Croquis.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             Croquis
+          </a>
+          <a href="documents/InformationsParcelles livron.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            Informations parcelles
           </a>
           </a>
           </a>
