--- a/index1.html
+++ b/index1.html
@@ -134,11 +134,15 @@ les activités et services nécessaires à la vie sociale.</li>
       <section id="elements-supplementaires">
         <h2>Documents</h2>
         <div class="documents">
-          <a href="documents/9 diagnostics.pdf">
+          <a href="documents/dpe.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             DPE
           </a>
-          <a href="documents/11 audit.pdf">
+          <a href="documents/ddt.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            DDT
+          </a>
+          <a href="documents/audit.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             AUDIT
           </a>
