--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maison à Livron-Sur-Drôme</title>
+  <title>Maison de ville</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,10 +14,10 @@
         <img src="./logo.png" alt="Logo">
       </div>
       <div class="text-background">
-        <h1>Corps de ferme à repenser entièrement </h1>
-        <p>Livron-sur-Drôme</p>
+        <h1>Maison de ville avec cour et grande cave</h1>
+        <p>BOURDEAUX - En Exclusivité</p>
         <p>Cyrille BOUVET - 06 22 85 16 39 / Yaël BORJA - 07 51 62 09 13</p>
-        <p class="prix">235 000 €</p>
+        <p class="prix">95 000 €</p>
       </div>
     </header>
     <nav class="menu">
@@ -36,16 +36,9 @@
       <section id="a-propos">
         <h2>A propos</h2>
         <p>
-<strong>À Livron, un projet immobilier aux possibilités infinies !
-Investisseurs, artisans, amoureux de la rénovation ou porteurs de projets collectifs :</strong> cette bâtisse est une occasion unique de donner vie à vos idées.</p> 
-<p><strong>Un emplacement idéal :</strong>  A proximité immédiate du centre de Livron, vous profitez de toutes les commodités (écoles, commerces, gare).</p>
-<p><Strong>Une surface rare :</Strong> Près de 400 m² exploitables, permettant de créer une grande maison de caractère, plusieurs logements indépendants (jusqu’à 6 habitations) ou encore un projet mêlant habitat et activité professionnelle.</p>
-<p><Strong>Un terrain généreux :</Strong> Plus de 1 700 m² plats et arborés avec figuiers, oliviers, bananiers… un cadre verdoyant qui fait déjà tout son charme.</p>
-<p><strong>Un potentiel créatif :</strong> Les 45 m² d’ateliers présents sur place offrent un espace supplémentaire idéal pour un artisan, un bricoleur ou même des aménagements annexes (studio, rangement, espace de travail).</p>
-<p><strong>Pourquoi ce bien est exceptionnel ?</strong> 
-Parce qu’il réunit à la fois l’authenticité des vieilles pierres, un terrain vaste, un emplacement stratégique et une modularité quasi illimitée. Que vous soyez dans une logique d’investissement locatif, de revente après rénovation ou de construction d’un lieu de vie familial/partagé, ce corps de ferme coche toutes les cases.</p>
-</p>
-</p>
+Bienvenue à Bourdeaux, un village perché au cœur du sud de la Drôme, entre les reliefs du Vercors et les senteurs de la Provence. Avec ses quelque 650 habitants, son histoire bien ancrée et ses commerces de proximité, ce coin de vie paisible a tout d’un cocon.</p> 
+<p>Au cœur du village, cette maison de ville pleine de charme vous accueille sur deux niveaux. Dès l’entrée, une agréable cour donne le ton et laisse entrevoir le potentiel du lieu.  Sa grande cave qui très certainement était une ruelle antique, sa cheminée ouverte ou encore son four à bois font état de fragments d'histoire. Vous profiterez de ses ouvertures traversantes au premier niveau, l'étage vous laisse envisager 3 chambres et une salle d'eau.</p>
+<p>Cette maison vous séduira par son charme naturel, que vous cherchiez un premier achat à façonner selon vos envies, un projet de rénovation ou un bien à valoriser pour de la location saisonnière, cette maison est une belle opportunité à saisir.</p>
 </p>
       </section>
       <section id="photos">
@@ -65,84 +58,66 @@ Parce qu’il réunit à la fois l’authenticité des vieilles pierres, un terr
           <img src="photos/12.jpeg" alt="Photo 3"  />
           <img src="photos/13.jpeg" alt="Photo 3" />
           <img src="photos/14.jpeg" alt="Photo 3"  />
-          <img src="photos/15.jpeg" alt="Photo 1" />
-          <img src="photos/16.jpeg" alt="Photo 2"/>
-          <img src="photos/17.jpeg" alt="Photo 3" />
-          <img src="photos/18.jpeg" alt="Photo 3"  />
-          <img src="photos/19.jpeg" alt="Photo 3"  />
-          <img src="photos/20.jpeg" alt="Photo 3" />
-          <img src="photos/21.jpeg" alt="Photo 3"  />
-          <img src="photos/22.jpeg" alt="Photo 3"  />
           <!-- Ajoutez autant de photos que nécessaire -->
           <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
           <a class="next" onclick="changeSlide(1)">&#10095;</a>
         </div>
       </section>
       <section id="video-interieur" class="video-section">
-        <h2>Vidéo Intérieur</h2>
-        <iframe src="https://www.youtube.com/embed/k21Zlaj3kdo"></iframe>
-      </section>
-      <section id="video-exterieur" class="video-section">
-        <h2>Vidéo Extérieur</h2>
-        <iframe src="https://www.youtube.com/embed/Y5VBjyiboKU"></iframe>
+        <h2>Vidéo Intérieur/Extérieur</h2>
+        <iframe src="https://www.youtube.com/embed/pJcc2ymEQ0w"></iframe>
       </section>
       <section id="geolocalisation">  
         <h2>Géolocalisation</h2>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1F0xkGHED5P18183rLMaF9LokhghakpM&usp=sharing"></iframe>
+        <iframe src="https://www.google.fr/maps/d/embed?mid=19y--9xMt8-l871VFniCikg92_WlYqQ4&usp=sharing"></iframe>
       </section>
       <section id="cadastre">
         <h2>Cadastre</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/Cadastre.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/cadastre.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
       <section id="Vue aérienne">
         <h2>Vue aérienne</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/Vue Aérienne.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/vue aérienne.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
     <section id="details-techniques">
     <h2>Détails Techniques</h2>
     <ul>
-        <li><strong>Année de construction :</strong> avant 1900</li>
-        <li><strong>Année d’achat :</strong> 1964</li>
+        <li><strong>Année de construction :</strong> avant 1949</li>
+        <li><strong>Année d’achat :</strong> 2023</li>
         <li><strong>Matériaux de construction :</strong> Pierre</li>
-        <li><strong>Isolation :</strong>murs /aucune - Plafond / uniquement sur les chambres de la partie habitable (5-10cm)</li>
+        <li><strong>Isolation :</strong>murs /aucune - Plafond / Oui</li>
         <li><strong>Toiture:</strong> Charpente traditionnelle</li>
         <li><strong>Assainissement :</strong> Tout à l'égout</li>
-        <li><strong>Huisseries :</strong> Bois simple vitrage </li>
-        <li><strong>Superficie habitable :</strong> 117 m2</li>
-        <li><strong>Superficie exploitable :</strong> 398 m2</li>
-        <li><strong>Superficie ateliers supplémentaires :</strong> 47 m2</li>
-        <li><strong>Surface cadastrale :</strong> 1 705 m2 </li> 
-        <li><strong>Mode de chauffage :</strong> Chaudière fuel par radiateur de 2008 / cuve 3 000 litres</li>
-        <li><strong>Taxe foncière :</strong> 2 603 €</li>
-        <li><strong>Autres informations :</strong> Forrage sur la propriété / Cave</li>
-        <li><strong>Autres informations :</strong> Possibilités de créer plusieurs logements</li>
-        <li><strong>Informations urbanistiques :</strong> Parcelles placées en zone Uc sur la commune : Zone urbaine équipée correspondant aux quartiers résidentiels de la commune.
-Elle est destinée principalement à recevoir des constructions à usage d’habitation ainsi que
-les activités et services nécessaires à la vie sociale.</li>
+        <li><strong>Huisseries :</strong> Portes fenêtres bois double vitrage récentes - Fenêtres PVC double vitrage récentes</li>
+        <li><strong>Superficie habitable :</strong> 80 m2</li>
+        <li><strong>Surface cadastrale :</strong> 97 m2</li>
+        <li><strong>Nombre de chambres :</strong> 3</li>
+        <li><strong>Cave :</strong> 43 m²</li>
+        <li><strong>Mode de chauffage :</strong> Convecteurs électriques</li>
+        <li><strong>Coût annuel du chauffage :</strong> Aucunes données récentes</li>
+        <li><strong>Coût annuel de l’électricité :</strong> Aucunes données récentes</li>
+        <li><strong>Taxe foncière :</strong> --- €</li>
+        <li><strong>Autres informations :</strong> Rénovations importantes à envisager pour un confort de vie</li>
     </ul>
 </section>
    <section id="dpe">
     <h2>Diagnostic de Performance Énergétique</h2>
     <div style="display: flex; justify-content: center; align-items: center;">
-      <img src="documents/étiquette DPE.png" alt="DPE" style="max-width: 40%; height: auto;" />
+      <img src="documents/icone dpe.png" alt="DPE" style="max-width: 40%; height: auto;" />
     </div>
 </section>
       <section id="elements-supplementaires">
         <h2>Documents</h2>
         <div class="documents">
-          <a href="documents/dpe.pdf">
+          <a href="documents/DPE.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             DPE
           </a>
-          <a href="documents/ddt.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            DDT
-          </a>
-          <a href="documents/audit.pdf">
+          <a href="documents/AER Succession Bertino.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             AUDIT
           </a>
@@ -150,9 +125,15 @@ les activités et services nécessaires à la vie sociale.</li>
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             Croquis
           </a>
-          <a href="documents/InformationsParcelles livron.pdf">
+          <a href="documents/AMIANTE.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Informations parcelles
+            Amiante 
+          <a href="documents/ELECTRICITE.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            Electricité
+          <a href="documents/GAZ.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            GAZ 
           </a>
           </a>
           </a>
